fixed css issues with styling and sign opu tbuttonwas little out of view or pushes right out of the view.

--- a/src/index.css
+++ b/src/index.css
@@ -74,6 +74,7 @@ header h1 {
   display: inline-block;
   padding: 0.2rem 0.4rem;/* new */
   margin-top: 0;
+  margin-right: 1rem;
   border: 0.5px solid rgba(255, 255, 255, 0.8);/* new */
   border-radius: 6px;
   cursor: pointer;
